# drone-go-brrrrr

./: .dockerignore  Dockerfile  Makefile  README.md  Reference_Drone_Updated_PID.m  compose.yaml  micropython_code_rpi_pico.py
FUSION360 files/: Linear guide rail v1.f3d  Testbed frame v3.f3d
STEP files/: 2020 V slot v1.step  Linear guide rail v1.step  Testbed frame v3.step
matlab/: MPU6050_acq_sf_n_Working_Model.slx  Quadrotor_Model_PID_Control.slx  Quadrotor_Model_PID_Control_Updated.slx  Quadrotor_PID_Parameter_Trial_Updated.m  Reference_Drone_Updated_PID.m  Simulink_Will_Selby_28_March_2024.slx  positioncontrol.m
pi-pico-w/: pico_w_pinout.txt
pi-pico-w/c/: CMakeLists.txt  pico_extras_import_optional.cmake
pi-pico-w/c/src/: CMakeLists.txt  main.c
pi-pico-w/c/test/: CMakeLists.txt  main new.c  main.c  main_test.c  rc_read.c
pi_pico_w/: ibus reference.py  ibus.py  main.py  micropython_code_rpi_pico.py  mpu6050_pinout.txt  pico_w_pinout.txt  test_ibus.py
pi_pico_w/ref/: calibrate_esc_timh
pi_pico_w/src/: calibrate_esc.py  main.py
pi_pico_w/test/: main.py  test.py
simulator/: Dockerfile  README.md  run_docker.sh
simulator/description/: package.xml
simulator/drone_bringup/: package.xml  setup.py
simulator/drone_description/: CMakeLists.txt  README.md
simulator/launches/: package.xml
simulator/sjtu_drone_description/: .gitignore
testbed/3d_prints/: Electronics mount v3.stl  L channel offset v3.stl  X axis wheel frame v5.stl  Y axis wheel frame v7.stl  Z axis wheel frame v4.stl
testbed/FUSION360 files/: 2020 V slot v1.f3d  3-way cube corner connector v1.f3d  6x4.5 Propeller ACW v1.f3d  Aluminium U-channel X v1.f3d  Aluminium bar X v1.f3d  Aluminium extrusion 3030 v2.f3d  Aluminium extrusion 6030 v2.f3d  Arduino Uno R3 v1.f3d  Arduino mount v4.f3d  Drone mount v1.f3d  F0850-12 v1.f3d  F330 chassis assembly v2.f3d  L channel 25x25x3 v2.f3d  Linear guide shaft rod v1.f3d  M4x16 socket head screw v2.f3d  M5 5 mm spacer v1.f3d  M5 nut v1.f3d  M6x8 socket head sleeve cap v3.f3d  Outer sidewall wheel frame v5.f3d  PTC-HRNM5 v1.f3d  PTP-2525-6 v1.f3d  PTP-2550-6 v1.f3d  PTP-MB2038-5 v2.f3d  Shaft mount D15 v1.f3d  Slider block D15 v1.f3d  Sliding block spacer v1.f3d  Spacer 8 mm L 8.2 mm ID 14 mm OD v2.f3d  T nut v2.f3d  Testbed assembly v1.f3d  Testbed assembly v4.f3d  V slot wheel D23.9 v2.f3d  Wheel X assembly v1.f3d  X axis wheel frame v3.f3d  Y axis wheel frame v1.f3d  Y axis wheel frame v16.f3d  Y axis wheel frame v3.f3d  Y axis wheel frame v5.f3d  Z axis wheel frame v1.f3d  Z axis wheel frame v2.f3d
testbed/STEP files/: 3-way cube corner connector v1.step  6x4.5 Propeller ACW v1.step  Aluminium U-channel X v1.step  Aluminium bar X v1.step  Aluminium extrusion 3030 v2.step  Aluminium extrusion 6030 v2.step  Arduino mount v4.step  (+29 more)
(+69 files in other folders)
